make customers public

--- a/models/staging/stg_customers.yml
+++ b/models/staging/stg_customers.yml
@@ -1,5 +1,6 @@
 models:
   - name: stg_customers
+    access: public
     description: Customer data with basic cleaning and transformation applied, one row per customer.
     columns:
       - name: customer_id
